# OSCaR

./: .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  README.md  api_index.html  developer_setup.html  genindex.html  getting_started.html  index.html  objects.inv  output.json  pyproject.toml  search.html  searchindex.js  sitemap.xml
.github/workflows/: docs_build_and_deploy.yml  test_and_deploy.yml
_sources/: developer_setup.md.txt
docs/source/: api_index.rst  conf.py  developer_setup.md  index.rst
oscar/: __init__.py  breeding_scheme.py  breeding_statistics.py  historical_stats.py  line.py  optimal_scheme_calculator.py  pyrat.py  pyrat_api.py
oscar/colony_management/pyrat/: api.py  standardise.py
oscar/frontend/: __init__.py  app.py
oscar/frontend/templates/: index.html
oscar/optimise/: estimate_offspring.py  optimal_scheme_calculator.py  surplus_summary.py
oscar/pyrat/: api.py
oscar_colony/: __init__.py  breeding_scheme.py  historical_stats.py
oscar_colony/colony_management/pyrat/: api.py  standardise.py
oscar_colony/optimise/: estimate_offspring.py  optimal_scheme_calculator.py  surplus_summary.py
tests/: conftest.py  pooch_registry.txt  pooch_test_data.py  test_frontend.py  test_optimal_scheme.py  test_usuage_statistics.py
tests/test_unit/: test_breeding_scheme.py  test_breeding_statistics.py  test_estimate_offspring.py  test_historical_stats.py  test_line_statistics.py  test_optimal_scheme_calculator.py  test_pyrat.py
tests/test_unit/optimise/: conftest.py  test_estimate_offspring.py  test_optimal_scheme.py  test_surplus_summary.py
tests/test_unit/pyrat/: test_api.py  test_standardise.py
